Fix overflows, margin

--- a/static/css/hugo-apps-theme.scss
+++ b/static/css/hugo-apps-theme.scss
@@ -215,6 +215,9 @@ thead, th {
   > * {
     margin: 1rem 2rem 1rem 2rem;
   }
+  * {
+    max-width: 100%
+  }
 }
 
 .apps-header {
